# YADS

./: .gitignore  CMakeLists.txt  FRCDriverStation.pro  README.md  YetAnotherDriverStation.pro  main.cpp  main.qml  qml.qrc
.github/: pull_request_template.md
.github/workflows/: build-and-release.yml
backend/: robotstate.cpp  robotstate.h
backend/comms/: communicationhandler.cpp  communicationhandler.h  packets.cpp  packets.h
backend/controllers/: controllerhiddevice.cpp  controllerhiddevice.h  controllerhidhandler.cpp  controllerhidhandler.h
backend/core/: constants.h  logger.cpp  logger.h
backend/fms/: fmshandler.cpp  fmshandler.h
backend/managers/: battery_manager.cpp  battery_manager.h  network_manager.cpp  network_manager.h  practice_match_manager.cpp  practice_match_manager.h
backend/robot/comms/: communicationhandler.cpp  communicationhandler.h  packets.cpp  packets.h
backend/robot/comms/fms/: fmshandler.cpp  fmshandler.h
dashboards/linux/: dashboards.json
dashboards/macos/: dashboards.json
dashboards/windows/: dashboards.json
qml/: BatteryAlertDialog.qml  BatterySettingsDialog.qml  ChartsView.qml  ControllersView.qml  DashboardView.qml  DiagnosticsView.qml  JoysticksView.qml  LogDownloadDialog.qml  LoggingView.qml  NetworkDiagnosticsView.qml  NetworkTablesIndicator.qml  OperationsView.qml  StatusIndicator.qml  SystemDetailsDialog.qml  SystemStatusIndicator.qml
scripts/: build-qhotkey.ps1  build-qhotkey.sh  build.ps1  build.sh
